--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
     "gapi-script": "^1.2.0",
+    "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.29.4",
     "nanoid": "^5.0.1",
     "react": "^18.2.0",
